﻿2009-02-21
* Lade till möjlighet att radera elever ur registret (med all tillhörande data) och en rättighet som kontrollerar motsvarande.

2009-02-12
= Release v1.1